force-app/main/default/objects/Blood_Coordination__c/Blood_Coordination__c.object-meta.xml
<CustomObject>
    <description>Blood coordination between donors and patients</description>
    <label>Blood Coordination</label>
    <nameField>
        <displayFormat>RI-{000}</displayFormat>
        <label>Rowid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Coordinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>