force-app/main/default/objects/Blood_Coordination__c/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <formula>TEXT( Donor__r.Blood_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blood Group</label>
    <type>Text</type>
</CustomField>