force-app/main/default/objects/Blood_Coordination__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <description>Blood Donor</description>
    <label>Donor</label>
    <referenceTo>Blood_Donor__c</referenceTo>
    <relationshipLabel>Blood Donor Coordination</relationshipLabel>
    <relationshipName>BloodDonor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>