force-app/main/default/objects/Blood_Coordination__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <description>Patient info</description>
    <label>Patient</label>
    <referenceTo>Blood_Request__c</referenceTo>
    <relationshipLabel>Blood Donor Coordination</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>