force-app/main/default/objects/Blood_Coordination__c/fields/Patient_Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Patient_Blood_Group__c</fullName>
    <formula>Patient__r.Request_Blood_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Blood Group</label>
    <type>Text</type>
</CustomField>