force-app/main/default/objects/Blood_Coordination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Patient_Blood_Group__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Attender_Contact__c</columns>
    <columns>Donor_Name__c</columns>
    <columns>Donor__c</columns>
    <columns>Blood_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>